--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1111,6 +1111,10 @@ ul, p, label, h1,h2,h3,h4,h5,h6 { margin: 0; }
     color: #464D5D;
     margin-bottom: 16px;
 }
+.news-details__content img {
+    max-width: 100%;
+    height: auto;
+}
 .news-details__content p {
     font-style: normal;
     font-weight: 500;
