--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1111,6 +1111,9 @@ ul, p, label, h1,h2,h3,h4,h5,h6 { margin: 0; }
     color: #464D5D;
     margin-bottom: 16px;
 }
+.news-details__content .image.image_resized {
+    max-width: 100%!important;
+}
 .news-details__content img {
     max-width: 100%;
     height: auto;
