--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1426,9 +1426,13 @@ margin-bottom: 24px;
     text-align: center;
 }
 .custommerReview__item img {    
-    width: auto;
+    width: auto!important;
+    object-fit: cover;
     height: 160px;
     margin-bottom: 16px;
+    border-radius: 50%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .custommerReview__item h3 {    
