--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1495,9 +1495,9 @@ margin-bottom: 24px;
 .custommerReview__carousel {
     position: relative;
 }
-.newNews__carousel {
+/* .newNews__carousel {
     display: none!important;
-}
+} */
 .newNews__carousel .owl-nav button, 
 .custommerReview__carousel .owl-nav button {
     position: absolute;
